--- a/modules/hello-world/hello_world.config.json
+++ b/modules/hello-world/hello_world.config.json
@@ -2,7 +2,7 @@
 	"name": "Hello World",
 	"slug": "hello_world",
 	"version": "0.1.0",
-	"path": "module/hello-world",
+	"path": "modules/hello-world",
 	"dependencies": {
 		"action": {}
 	},
