--- a/modules/handle-call/handle_call.config.json
+++ b/modules/handle-call/handle_call.config.json
@@ -2,8 +2,10 @@
 	"name": "Handle Call",
 	"slug": "handle_call",
 	"version": "0.1.0",
-	"path": "module/handle-call",
+	"path": "modules/handle-call",
 	"dependencies": {
+		"class": {},
+		"model":{},
 		"action": {}
 	}
 }
