--- a/modules/call-comment/call-comment.config.json
+++ b/modules/call-comment/call-comment.config.json
@@ -4,8 +4,8 @@
 	"version": "0.1.0",
 	"path": "modules/call-comment",
 	"dependencies": {
+		"model": {},
 		"class": {},
-		"action": {},
-		"model": {}
+		"action": {}
 	}
 }
